@@ -77,25 +77,25 @@ int main(int argc, char *argv[])
   progname = argv[0];
   suite_setup();
   UnityBegin("packetProcessing.c");
-  RUN_TEST(test_TooShortLength, 23);
-  RUN_TEST(test_LengthNotMultipleOfFour, 24);
-  RUN_TEST(test_TooShortExtensionFieldLength, 25);
-  RUN_TEST(test_UnauthenticatedPacketReject, 26);
-  RUN_TEST(test_CryptoNAKPacketReject, 27);
-  RUN_TEST(test_AuthenticatedPacketInvalid, 28);
-  RUN_TEST(test_AuthenticatedPacketUnknownKey, 29);
-  RUN_TEST(test_ServerVersionTooOld, 30);
-  RUN_TEST(test_ServerVersionTooNew, 31);
-  RUN_TEST(test_NonWantedMode, 32);
-  RUN_TEST(test_KoDRate, 33);
-  RUN_TEST(test_KoDDeny, 34);
-  RUN_TEST(test_RejectUnsyncedServer, 35);
-  RUN_TEST(test_RejectWrongResponseServerMode, 36);
-  RUN_TEST(test_AcceptNoSentPacketBroadcastMode, 37);
-  RUN_TEST(test_CorrectUnauthenticatedPacket, 38);
-  RUN_TEST(test_CorrectAuthenticatedPacketMD5, 39);
-  RUN_TEST(test_CorrectAuthenticatedPacketSHA1, 40);
-  RUN_TEST(test_CorrectAuthenticatedPacketCMAC, 41);
+  RUN_TEST(test_TooShortLength, 21);
+  RUN_TEST(test_LengthNotMultipleOfFour, 22);
+  RUN_TEST(test_TooShortExtensionFieldLength, 23);
+  RUN_TEST(test_UnauthenticatedPacketReject, 24);
+  RUN_TEST(test_CryptoNAKPacketReject, 25);
+  RUN_TEST(test_AuthenticatedPacketInvalid, 26);
+  RUN_TEST(test_AuthenticatedPacketUnknownKey, 27);
+  RUN_TEST(test_ServerVersionTooOld, 28);
+  RUN_TEST(test_ServerVersionTooNew, 29);
+  RUN_TEST(test_NonWantedMode, 30);
+  RUN_TEST(test_KoDRate, 31);
+  RUN_TEST(test_KoDDeny, 32);
+  RUN_TEST(test_RejectUnsyncedServer, 33);
+  RUN_TEST(test_RejectWrongResponseServerMode, 34);
+  RUN_TEST(test_AcceptNoSentPacketBroadcastMode, 35);
+  RUN_TEST(test_CorrectUnauthenticatedPacket, 36);
+  RUN_TEST(test_CorrectAuthenticatedPacketMD5, 37);
+  RUN_TEST(test_CorrectAuthenticatedPacketSHA1, 38);
+  RUN_TEST(test_CorrectAuthenticatedPacketCMAC, 39);
 
   return (UnityEnd());
 }
